[gd_scene load_steps=7 format=3 uid="uid://7qc16uarmrlp"]

[ext_resource type="Script" uid="uid://dgqui65fvkf5t" path="res://ui/main_menu_ui.gd" id="1_kyud6"]
[ext_resource type="Theme" uid="uid://xfkmr7u3ugdu" path="res://ui/console_theme.tres" id="2_pst23"]
[ext_resource type="PackedScene" uid="uid://b825y76mftvgw" path="res://ui/settings_menu.tscn" id="3_gndvg"]

[sub_resource type="Animation" id="Animation_wkomq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper/Start Button:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper/Start Button:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper/Settings Button:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper/Settings Button:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper/Quit Button:anchor_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper/Quit Button:anchor_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PanelContainer/MarginContainer/MainMenu/Company Name:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4n8j7"]
resource_name = "main_menu_ui_open"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper/Start Button:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 4.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper/Start Button:anchor_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 4.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper/Settings Button:anchor_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 4.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.0, -2.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper/Settings Button:anchor_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4, 4.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.0, -1.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper/Quit Button:anchor_top")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4, 4.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-3.0, -3.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper/Quit Button:anchor_bottom")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4, 4.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.0, -2.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.5, -1.5, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PanelContainer/MarginContainer/MainMenu/VBoxContainer:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.5, -0.5, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PanelContainer/MarginContainer/MainMenu/Company Name:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfl7c"]
_data = {
&"RESET": SubResource("Animation_wkomq"),
&"main_menu_ui_open": SubResource("Animation_4n8j7")
}

[node name="MainMenuUI" type="Control" node_paths=PackedStringArray("main_menu", "settings_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pst23")
script = ExtResource("1_kyud6")
main_menu = NodePath("PanelContainer/MarginContainer/MainMenu")
settings_menu = NodePath("PanelContainer/MarginContainer/SettingsMenu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MainMenu" type="Control" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Company Name" type="Label" parent="PanelContainer/MarginContainer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Terrible Company Name"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Button Wrapper" type="Control" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Start Button" type="Button" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Start"

[node name="Settings Button Wrapper" type="Control" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Settings Button" type="Button" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Settings"

[node name="Quit Button Wrapper" type="Control" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Quit Button" type="Button" parent="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Quit"

[node name="SettingsMenu" parent="PanelContainer/MarginContainer" instance=ExtResource("3_gndvg")]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bfl7c")
}
autoplay = "main_menu_ui_open"

[connection signal="pressed" from="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Start Button Wrapper/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Settings Button Wrapper/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainMenu/VBoxContainer/Quit Button Wrapper/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SettingsMenu/PanelContainer/VBoxContainer/VBoxContainer/Back Button" to="." method="_on_settings_back_button_pressed"]

[editable path="PanelContainer/MarginContainer/SettingsMenu"]
